package org.example.structural.bridge;

public interface ICreditCard {
    void makePayment();
}
