@startuml

title __BRIDGE's Class Diagram__\n

  namespace org.example {
    namespace structural.bridge {
      class org.example.structural.bridge.ClassicCreditCard {
          + ClassicCreditCard()
          + makePayment()
      }
    }
  }
  

  namespace org.example {
    namespace structural.bridge {
      abstract class org.example.structural.bridge.CreditCard {
          + CreditCard()
          {abstract} + makePayment()
      }
    }
  }
  

  namespace org.example {
    namespace structural.bridge {
      interface org.example.structural.bridge.ICreditCard {
          {abstract} + makePayment()
      }
    }
  }
  

  namespace org.example {
    namespace structural.bridge {
      class org.example.structural.bridge.SecureCreditCard {
          + makePayment()
      }
    }
  }
  

  namespace org.example {
    namespace structural.bridge {
      class org.example.structural.bridge.UnsecureCreditCard {
          + makePayment()
      }
    }
  }
  

  org.example.structural.bridge.ClassicCreditCard -up-|> org.example.structural.bridge.CreditCard
  org.example.structural.bridge.CreditCard o-- org.example.structural.bridge.ICreditCard : card
  org.example.structural.bridge.SecureCreditCard .up.|> org.example.structural.bridge.ICreditCard
  org.example.structural.bridge.UnsecureCreditCard .up.|> org.example.structural.bridge.ICreditCard


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
